# liburing4cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  Makefile  README.md  async_coro.hpp  async_main.cpp  build.sh  cancelable.hpp  coroutine.hpp  echo-server.cpp  file-server.cpp  functions.cmake  global.cpp  global.hpp  io_coroutine.hpp  io_host.hpp  io_service.hpp  liburing-http-demo.pro  main.c  main.cpp  ping-pong-epoll.cpp  ping-pong-io_uring.cpp  promise.hpp  task.hpp  utils.hpp  when.hpp  yield.hpp
.github/workflows/: build-and-test.yaml
build-win/: Makefile
demo/: Makefile  bench.cpp  echo_server.cpp  file_server  file_server.cpp  http_client.cpp  link_cp.cpp  mime_dicts.hpp  test.cpp  threading.cpp
demo/other/: mime_dicts.cpp
epoll/: io_host.hpp  ping-pong.cpp
include/: cancelable.hpp  io_service.hpp  sqe_awaitable.hpp  stdlib_coroutine.hpp  task.hpp  utils.hpp  when.hpp
include/liburing/: io_service.hpp  sqe_awaitable.hpp  stdlib_coroutine.hpp  task.hpp  utils.hpp
io_uring/: bench.cpp  fixed_file.hpp  io_coroutine.hpp  io_host.hpp  ping-pong.cpp
poll/: io_coroutine.hpp  io_host.hpp  ping-pong.cpp
tests/: Makefile  delay_and_print.cpp  ping_pong.cpp  read_write_pipe.cpp  whens.cpp
win_ring/: bench.cpp  io_coroutine.hpp  io_host.hpp
